# FlashGen

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
csrc/bindings/: flashgen_bindings.cpp
csrc/include/: flash_attention.cuh  model_config.hpp  paged_kv_cache.cuh  pipeline.hpp  prefix_cache.hpp  quantization.cuh  scheduler.hpp  transformer.hpp
csrc/kernels/: flash_attention.cu  quantization.cu
csrc/runtime/: block_allocator.cpp  pipeline.cpp  scheduler.cpp  transformer.cu
examples/: basic_inference.py  batch_inference.py  streaming_demo.py
flashgen/: __init__.py  engine.py  llm.py  outputs.py
flashgen/benchmarks/: bench_latency.py  bench_pytorch.py  bench_throughput.py
flashgen/core/: __init__.py  config.py
flashgen/memory/: __init__.py  block_allocator.py  paged_kv_cache.py
flashgen/model_loader/: __init__.py  hf_loader.py  tokenizer.py
flashgen/onnx_export/: __init__.py  exporter.py
flashgen/profiling/: __init__.py  nsight.py
flashgen/sampling/: __init__.py  sampler.py
flashgen/scheduler/: __init__.py  continuous_batcher.py
flashgen/streaming/: __init__.py  generator.py
flashgen/trt_builder/: __init__.py  builder.py  calibrator.py  engine_runner.py
include/: block_allocator.hpp  cuda_utils.cuh  flash_attention.cuh  kernels.cuh  model_config.hpp  pipeline.hpp  request.hpp  scheduler.hpp  transformer.hpp
scripts/: build_engine.py
src/: flash_attention.cu  kernels.cu  main.cpp  paged_kv_cache.cu  pipeline.cpp  prefix_cache.cpp  scheduler.cpp  transformer.cu
tests/: test_block_allocator.cpp  test_flash_attention.cu  test_kernels.cu  test_pipeline.cpp  test_scheduler.cpp
tests/integration/: test_end_to_end.py
tests/unit/: test_paged_attention.cu  test_prefix_cache.cpp
