[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flashgen"
version = "0.1.0"
description = "End-to-end LLM inference engine: TensorRT + paged KV cache + continuous batching"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "safetensors>=0.4.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.16.0",
    "huggingface-hub>=0.19.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
trt = ["tensorrt>=8.6"]
bench = ["nvtx>=0.2", "matplotlib>=3.7"]
dev   = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
flashgen-build-engine = "scripts.build_engine:main"
flashgen-download     = "scripts.download_model:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flashgen*", "scripts*"]
